--- a/jungolPractice.html
+++ b/jungolPractice.html
@@ -133,5 +133,39 @@
 		}
 	</script>
 <hr/><!--문제구분 하는 hr태그 -->
+<h3>529 : 선택제어문 - 자가진단2</h3><br/>
+	<h5>“몸무게+100-키”를 비만수치 공식이라고 하자.
+키와 몸무게를 자연수로 입력받아 첫 번째 줄에 비만수치를 출력하고, 비만수치가 0보다 크면 다음줄에 비만("Obesity")이라는 메시지를 출력하는 프로그램을 작성하시오. (출력형식은 아래 출력 예를 참고하세요.)</h5>
+	<h6>입력 예 : </h6><p/>
+	<h6>155 60</h6>
+	<h6>출력 예 : </h6><p/>
+	<h6>5<p/>
+		Obesity</h6>
+	<h2>풀이 -------------------------------------------------</h2>
+	<!-- 문제 풀기 -->
+
+	<!-- 입력부 -->
+	키 : <input type="text" id="height"/><p/>
+	몸무게 : <input type="text" id="weight"/><p/>
+	<button onclick="solve529()">입력</button>
+
+	<!-- 출력부 -->
+	<p id="result529"></p>
+	<p id="result529-1"></p>
+
+
+	<script>
+		function solve529(){
+			// 사용자가 입력한 키,몸무게 data 를 받아오기
+			var hei = document.getElementById('height').value;
+			var wei = document.getElementById('weight').value;
+
+			// result529 id 값을 가진 태그에 키 데이터를 보여주기
+			document.getElementById('result529').innerHTML = hei;
+			document.getElementById('result529-1').innerHTML = wei;
+		}
+	</script>
+
+<hr/><!--문제구분 하는 hr태그 -->
 </body>
 </html>
