* jungolPractice.html : 상수 키워드 변경 * 131.html : jungol 131번 문제

--- a/jungolPractice.html
+++ b/jungolPractice.html
@@ -190,10 +190,10 @@
             var Kg = parseFloat(document.getElementById('weight2').value);
 
             // 기준 데이터를 다 상수로 설정!
-            var FLY_WEIGHT = 50.80;
-            var LIGHT_WEIGHT = 61.23;
-            var MIDDLE_WEIGHT = 72.57;
-            var CRUISER_WEIGHT = 88.45;
+            const FLY_WEIGHT = 50.80;
+            const LIGHT_WEIGHT = 61.23;
+            const MIDDLE_WEIGHT = 72.57;
+            const CRUISER_WEIGHT = 88.45;
             // curiserWeiger 이상은 다 heavyWeight
 
             var FLY_WEIGHT_STR = "Flyweight";
