--- a/131.html
+++ b/131.html
@@ -22,12 +22,18 @@
     <p id="result534"></p>
     <script>
         function solve534(){
-            var input1 = document.getElementById('input1').value;
-            var input2 = document.getElementById('input2').value;
+            var inputTag1 = Number(document.getElementById('input1').value);
+            var inputTag2 = Number(document.getElementById('input2').value);
+
+            if(inputTag1 > inputTag2){
+               var temp = inputTag1;
+               inputTag1 = inputTag2;
+               inputTag2 = temp;
+            }
 
             // console.log(input1 + ", " + input2);
             var output = "";
-            for(var i = input1; i <= input2; i++){
+            for(var i = inputTag1; i <= inputTag2; i++){
                output = output + i + " ";
             }
 
